# KIST-Dual-Arm-Operational-Space-Control

./: CMakeLists.txt  README.md
include/: controller.h  custommath.h  robotmodel.h  trajectory.h
model/: dualarm_mod.xml
src/: controller.cpp  robotmodel.cpp  simulate.cpp  trajectory.cpp
